--- a/project-03.html
+++ b/project-03.html
@@ -6,13 +6,21 @@
     <div class="spacer"></div>
     <div class="description">
       <h3>General Overview</h3>
-      <p>I collaborated with 3 of my Mechatronics Engineering colleagues on this project. This project spanned for just over 2 months starting from the initial design to the final presentation day. This is a prime example of a true Mechatronics project as it incorporated mechanical, electrical and software design. We used a Lego Mindstorms NXT 2.0 micro-controller kit and we coded all the functionality in RobotC (a variation of C). This was a great project in terms of learning how to code for a real life physical application. I personally gained a lot of embedded software experience and learned how to deal with limited memory on the micro-controller. I also gained valuable experience in many other software design concepts such as error-checking principles, developing safe and secure code, real-time dynamic calculating and complex debugging techniques.</p>
+      <p>
+        I collaborated with 3 of my Mechatronics Engineering colleagues on this project. This project spanned for just over 2 months starting from the initial design to the final presentation day. This is a prime example of a true Mechatronics project as it incorporated mechanical, electrical and software design. We used a Lego Mindstorms NXT 2.0 micro-controller kit and we coded all the functionality in RobotC (a variation of C). This was a great project in terms of learning how to code for a real life physical application. I personally gained a lot of embedded software experience and learned how to deal with limited memory on the micro-controller. I also gained valuable experience in many other software design concepts such as error-checking principles, developing safe and secure code, real-time dynamic calculating and complex debugging techniques.
+      </p>
       <h3>Hardware</h3>
-      <p>The mechanical design of this ATM was relatively simple as this was a prototype and not meant to be used in the real world. For example, the real final product would need to be fully covered with durable material to protect it from unauthorized people breaking into the ATM and stealing money. Our prototype does not incorporate this outer "shield" but rather displays the internal parts of an ATM. We integrated three motors into this design. The motor responsible for dispensing money had controlled movement (motor encoder + timers). We also used a color sensor for reading the client's card and a touch sensor for detecting when a user swipes a client card.</p>
+      <p>
+        The mechanical design of this ATM was relatively simple as this was a prototype and not meant to be used in the real world. For example, the real final product would need to be fully covered with durable material to protect it from unauthorized people breaking into the ATM and stealing money. Our prototype does not incorporate this outer "shield" but rather displays the internal parts of an ATM. We integrated three motors into this design. The motor responsible for dispensing money had controlled movement (motor encoder + timers). We also used a color sensor for reading the client's card and a touch sensor for detecting when a user swipes a client card.
+      </p>
       <h3>Software</h3>
-      <p>On the software side of things we used object oriented programming practices and separated all of our code into functional blocks. This code is fairly complex as we truly pushed the Lego Mindstorm NXT micro-controller to it's maximum in terms of GUI and processor speed. You can view the code on my <a href="https://github.com/bhamodi/Lego-Mindstorms-ATM" target="_blank">GitHub.</a></p>
+      <p>
+        On the software side of things we used object oriented programming practices and separated all of our code into functional blocks. This code is fairly complex as we truly pushed the Lego Mindstorm NXT micro-controller to it's maximum in terms of GUI and processor speed. You can view the code on my <a href="https://github.com/bhamodi/Lego-Mindstorms-ATM" target="_blank">GitHub.</a>
+      </p>
       <h3>Video</h3>
-      <p>The video shown below is just a quick 20-second feature overview of the ATM. This shows the final product that was presented.</p>
+      <p>
+        The video shown below is just a quick 20-second feature overview of the ATM. This shows the final product that was presented.
+      </p>
       <iframe width="100%" height="600" src="//www.youtube.com/embed/bjbmGOylRZY" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
